--- a/simple-project/index.html
+++ b/simple-project/index.html
@@ -1,3 +1,4 @@
+************This is master branch change**************
 *************This is feature1 change*****************
 <html>
 <h1>Hello how are you?</h1>
